fix wrap

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,10 +13,7 @@ pre.highlight,
 
 pre.highlight code,
 .highlight pre code {
-  // white-space: pre-wrap;
-  // background-color: #272822;
-  background-color: #272822;
-  color: #666666;
+  white-space: pre-wrap;
 }
 
 .btn,
